# OpenCCCA

./: .gitignore  README.md  README_fr.md  install.bat  pyproject.toml  requirements.txt
app/: main.py
app/controler/: ConventionScrapper2015.py  ConventionScrapper2021.py  ConventionScrapper2024.py  OpenCCCA.py
app/model/: ConventionParser.py  ConventionParserHTML.py  ConventionParserPDF.py  ConventionScrapper2015.py  ConventionScrapper2021.py  ConventionScrapper2024.py  ConventionScrapperAbstract.py  Enrichment.py  Entities.py  FiliereParser.py  GuessContext.py  JobParser.py  TableParser.py  Validation.py  ValueParser.py
app/utils/: PathManager.py  Utils.py
app/view/: ConventionViewBuilder.py
data/: conv_fonctions.json  conv_fonctions_2.json  convention.json  convention_animation_full.json  convention_animation_full_2.json  new_scrapper.py  new_scrapper_2.py  new_scrapper_3.py  tableau_fonctions.html
data/convention_V2021-02-01/: ccfpa_articles.json  ccfpa_filieres.json  ccfpa_jobs.json
dev/: todo.md  todo.txt
export/convention_V2021-02-01/: ccfpa_articles.json  ccfpa_filieres.json  (+1 more)
resources/: gov_site_copypaste.html  gov_site_copypaste_sample.html
src/: ArticleParser.py  ConventionScrapper.py  ConventionScrapper2015.py  ConventionScrapper2021.py  DBImportPreparator.py  Entities.py  GuessContext.py  JobTitleParser.py  OpenCCCA.py  PathManager.py  TableParser.py  Utils.py  ValueParser.py  main.py
tests/: export_2015_for_plugin.bat  export_2021_for_plugin.bat  export_2024_for_plugin.bat  export_all_years_for_plugin.bat  parse_2021.bat  parse_2024.bat
(+4 files in other folders)
