[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenCCCA"
version = "0.1.0"
description = "Scrap data from legal pdf job document (french animation industry) "
authors = [
  {name="Alexandre Cormier", email="contat@alexandrecormier.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pdfplumber"
]

[tool.setuptools.packages.find]
where = ["app"]